# y

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  THEME_PLAN.md  installer.sh
plugins/: fuzzy_finder.js
src/: buffer.rs  completion.rs  config.rs  cursor.rs  editor.rs  layout.rs  main.rs  mode.rs  tui.rs  view.rs
src/commands/: command.rs  e.rs  mod.rs
src/input/: command.rs  insert.rs  mod.rs  normal.rs  visual.rs
src/keybindings/: action.rs  defaults.rs  key.rs  mod.rs  registry.rs
src/lsp/: client.rs  mod.rs  types.rs
src/operations/: editing.rs  file.rs  mod.rs  motion.rs  scroll.rs  undo.rs  yank_paste.rs
src/plugins/: deno_runtime.rs  mod.rs
src/plugins/file_tree/: mod.rs
src/plugins/fuzzy_finder/: mod.rs
src/plugins/git_client/: mod.rs
src/plugins/js_fuzzy_finder/: mod.rs
src/plugins/syntax_highlighter/: mod.rs
src/render/: buffer_widget.rs  mod.rs  status_bar.rs
src/theme/: builtin.rs  mod.rs
